@@ -191,6 +191,16 @@
 
               <li>
                 <p>
+                  [Mar, 2025] Our paper "Nonconvex entanglement monotone determining the characteristic length of entanglement distribution in continuous-variable quantum networks" is published in Physical Review A
+(<a href="https://doi.org/10.1103/PhysRevA.111.042429" target="_blank">doi.org/10.1103/PhysRevA.111.042429</a>).
+Congratulations to Yaqi!
+
+
+                </p>
+              </li>
+
+              <li>
+                <p>
                   [Mar, 2025] Our paper "Unveiling the importance of nonshortest paths in quantum networks" is published in Science Advances
 (<a href="https://doi.org/10.1126/sciadv.adt2404" target="_blank">doi.org/10.1126/sciadv.adt2404</a>).
 Congratulations to Xinqi and Gaogao!
@@ -226,18 +236,6 @@ my advisor, István, and Balázs, whose mathematical expertise was essential.
                   [Jan, 2025] It was pleasant to present our work "Multipartite entanglement routing
 as a hypergraph immersion problem" at
 <a href="https://www.ddays.org/2025/index.html" target="_blank">Dynamics Days US 2025</a>.
-
-
-                </p>
-              </li>
-
-              <li>
-                <p>
-                  [Dec, 2024] Happy to attend
-<a href="https://www.math.rutgers.edu/news-events/list-all-events/icalrepeat.detail/2024/12/15/22620/280/127th-statistical-mechanics-conference" target="_blank">the 127th Statistical Mechanics Conference</a>
-at Rutgers University (probably the oldest conference I've attended...).
-I gave a short talk about "path percolation", an interesting statistical model
-that is related to both quantum communication networks and physical networks!
 
 
                 </p>
