@@ -111,6 +111,16 @@
 
               <li>
                 <p>
+                  [Mar, 2025] Our paper "Nonconvex entanglement monotone determining the characteristic length of entanglement distribution in continuous-variable quantum networks" is published in Physical Review A
+(<a href="https://doi.org/10.1103/PhysRevA.111.042429" target="_blank">doi.org/10.1103/PhysRevA.111.042429</a>).
+Congratulations to Yaqi!
+
+
+                </p>
+              </li>
+  
+              <li>
+                <p>
                   [Mar, 2025] Our paper "Unveiling the importance of nonshortest paths in quantum networks" is published in Science Advances
 (<a href="https://doi.org/10.1126/sciadv.adt2404" target="_blank">doi.org/10.1126/sciadv.adt2404</a>).
 Congratulations to Xinqi and Gaogao!
