@@ -1,5 +1,11 @@
 ##
 date: 2025-03
+Our paper "Nonconvex entanglement monotone determining the characteristic length of entanglement distribution in continuous-variable quantum networks" is published in Physical Review A
+(<a href="https://doi.org/10.1103/PhysRevA.111.042429" target="_blank">doi.org/10.1103/PhysRevA.111.042429</a>).
+Congratulations to Yaqi!
+
+##
+date: 2025-03
 Our paper "Unveiling the importance of nonshortest paths in quantum networks" is published in Science Advances
 (<a href="https://doi.org/10.1126/sciadv.adt2404" target="_blank">doi.org/10.1126/sciadv.adt2404</a>).
 Congratulations to Xinqi and Gaogao!
